# django-rql

./: .coveragerc  .gitignore  .travis.yml  Jenkinsfile  LICENSE  MANIFEST.in  README.md  jenkins.sh  mkdocs.yml  pyproject.toml  setup.cfg  setup.py  sonar-project.properties  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: build.yml  deploy.yml
dj_rql/: __init__.py  _dataclasses.py  compat.py  constants.py  drf.py  exceptions.py  fields.py  filter_cls.py  grammar.py  openapi.py  parser.py  qs.py  rest_framework.py  serializers.py  transformer.py  utils.py
dj_rql/drf/: __init__.py  _utils.py  backend.py  compat.py  fields.py  paginations.py  serializers.py
dj_rql/management/commands/: generate_rql_class.py
dj_rql/rest_framework/: backend.py  filter_class.py  filter_cls.py
docs/: conf.py  getting_started.md  getting_started.rst  index.md  index.rst  quickstart.md  reference.md  reference.rst  select.md  select.rst  user_guide.md  user_guide.rst
docs/css/: custom.css
py_rql/: constants.py  exceptions.py  grammar.py  parser.py  transformer.py
requirements/: dev.txt  docs.txt  extra.txt  test.txt
tests/: constants.py  data.py  test_constants.py  test_exceptions.py  test_openapi.py  test_qs.py  test_rest_framework.py  test_utils.py
tests/dj_rf/: filters.py  models.py  serializers.py  settings.py  urls.py  view.py
tests/test_commands/: test_generate_rql_class.py
tests/test_drf/: conftest.py  test_common_drf_backend.py  test_django_filters_backend.py  test_dynamic_filter.py  test_pagination.py  test_select.py  test_serializers.py
tests/test_filter_class/: test_fields.py  utils.py
tests/test_filter_cls/: conftest.py  test_apply_filters.py  test_fields_filtering.py  test_initialization.py  test_select.py  utils.py
tests/test_parser/: __init__.py  constants.py  test_caching.py  test_comparison.py  test_list_operators.py  test_listing.py  test_logical.py  test_logical_operators.py  test_ordering.py  test_searching.py  utils.py
tests/test_py_rql/: test_constants.py  test_exceptions.py
tests/test_py_rql/test_parser/: test_caching.py  test_comparison.py  test_listing.py  test_logical.py  test_ordering.py  test_searching.py  utils.py
tests/test_rest_framework/: conftest.py  test_common_drf_backend.py  test_django_filters_backend.py  test_filter_backend.py  test_pagination.py  test_select.py
